--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,12730],[[4,5,6,0,[],[1,43,12679],[[7,8,9,0,[],[1,51,12669],[],[[10,0,0,[],[1,416,12301],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,14269],[[4,5,6,0,[],[1,18,14250],[[7,8,9,0,[],[1,20,14246],[],[[10,0,0,[],[1,164,14099],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tester","*C:\\Users\\Asus\\Desktop\\tester","*..","*TestCases","*C:\\Users\\Asus\\Desktop\\tester\\TestCases","*../TestCases","*Herokuapp","*C:\\Users\\Asus\\Desktop\\tester\\TestCases\\herokuapp.robot","*../TestCases/herokuapp.robot","*JavaScript Alerts"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tester","*C:\\Users\\Asus\\Desktop\\tester","*..","*TestCases","*C:\\Users\\Asus\\Desktop\\tester\\TestCases","*../TestCases","*Indeed","*C:\\Users\\Asus\\Desktop\\tester\\TestCases\\indeed.robot","*../TestCases/indeed.robot","*TC1"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Tester","name":"Tester","pass":1,"skip":0},{"elapsed":"00:00:13","fail":0,"id":"s1-s1","label":"Tester.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:13","fail":0,"id":"s1-s1-s1","label":"Tester.TestCases.Herokuapp","name":"Herokuapp","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:14","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:14","fail":0,"id":"s1","label":"Tester","name":"Tester","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s1","label":"Tester.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s1-s1","label":"Tester.TestCases.Indeed","name":"Indeed","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1695725768305;
+window.output["baseMillis"] = 1695890537359;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12763;
+window.output["generated"] = 14284;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
