--- a/results/report.html
+++ b/results/report.html
@@ -1629,19 +1629,19 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8187],[[4,5,6,0,[],[1,20,8165],[[7,8,9,0,[],[1,23,8160],[],[[10,0,0,[],[1,197,7984],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,8191],[[4,5,6,0,[],[1,18,8171],[[7,8,9,0,[],[1,20,8168],[],[[10,0,0,[],[1,164,8022],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tester","*C:\\Users\\Asus\\Documents\\GitHub\\Libary\\tester","*..","*Org","*C:\\Users\\Asus\\Documents\\GitHub\\Libary\\tester\\Org","*../Org","*TestOrg","*C:\\Users\\Asus\\Documents\\GitHub\\Libary\\tester\\Org\\TestOrg.robot","*../Org/TestOrg.robot","*TC:Invalid Login"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tester","*C:\\Users\\Asus\\Documents\\GitHub\\Libary\\tester","*..","*TestCases","*C:\\Users\\Asus\\Documents\\GitHub\\Libary\\tester\\TestCases","*../TestCases","*TestOrg","*C:\\Users\\Asus\\Documents\\GitHub\\Libary\\tester\\TestCases\\TestOrg.robot","*../TestCases/TestOrg.robot","*TC:Invalid Login"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Tester","name":"Tester","pass":1,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s1","label":"Tester.Org","name":"Org","pass":1,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s1-s1","label":"Tester.Org.TestOrg","name":"TestOrg","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Tester","name":"Tester","pass":1,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s1","label":"Tester.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s1-s1","label":"Tester.TestCases.TestOrg","name":"TestOrg","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1695975724504;
+window.output["baseMillis"] = 1695977430535;
 </script>
 <script type="text/javascript">
 window.output["generated"] = 8201;
