--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5901],[[4,5,6,0,[],[1,19,5881],[[7,8,9,0,[],[1,24,5873],[],[[10,0,0,[],[1,2538,499],[]],[11,0,0,[],[1,3039,403],[]],[12,0,0,[],[1,3445,375],[]]],[],[3,3,0,0]]],[],[],[3,3,0,0]]],[],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,12566],[[4,5,6,0,[],[1,44,12518],[[7,8,9,0,[],[1,50,12504],[],[[10,0,0,[],[1,5871,1645],[]],[11,0,0,[],[1,7518,1307],[]],[12,0,0,[],[1,8828,1519],[]]],[],[3,3,0,0]]],[],[],[3,3,0,0]]],[],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tester","*C:\\Users\\Asus\\Documents\\GitHub\\Libary\\tester","*..","*TestCases","*C:\\Users\\Asus\\Documents\\GitHub\\Libary\\tester\\TestCases","*../TestCases","*Test","*C:\\Users\\Asus\\Documents\\GitHub\\Libary\\tester\\TestCases\\test.robot","*../TestCases/test.robot","*Verify Invalid Login - wrong username","*Verify Invalid Login - 'locked_out_user' worong password","*Verify Invalid Login - wrong password"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tester","*C:\\Users\\Asus\\Documents\\GitHub\\Libary\\tester","*..","*TestCases","*C:\\Users\\Asus\\Documents\\GitHub\\Libary\\tester\\TestCases","*../TestCases","*Bmi","*C:\\Users\\Asus\\Documents\\GitHub\\Libary\\tester\\TestCases\\bmi.robot","*../TestCases/bmi.robot","*TC1:Test BMI:1","*TC1:Test BMI:2","*TC1:Test BMI:3"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"Tester","name":"Tester","pass":3,"skip":0},{"elapsed":"00:00:06","fail":0,"id":"s1-s1","label":"Tester.TestCases","name":"TestCases","pass":3,"skip":0},{"elapsed":"00:00:06","fail":0,"id":"s1-s1-s1","label":"Tester.TestCases.Test","name":"Test","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Tester","name":"Tester","pass":3,"skip":0},{"elapsed":"00:00:13","fail":0,"id":"s1-s1","label":"Tester.TestCases","name":"TestCases","pass":3,"skip":0},{"elapsed":"00:00:13","fail":0,"id":"s1-s1-s1","label":"Tester.TestCases.Bmi","name":"Bmi","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1695979471508;
+window.output["baseMillis"] = 1695985263446;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5914;
+window.output["generated"] = 12604;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
